...
        self.updateControls(with: .full)
    }
    
    private func createView() -> Void {
        self.fullScreenButton = UIButton(type: .custom)
        self.fullScreenButton.addTarget(self, action: #selector(fullScreenButtonTapped(sender:)), for: .touchUpInside)
        self.fullScreenButton.setImage(UIImage.init(named: "Fullscreen"), for: .normal)
        self.fullScreenButton.imageEdgeInsets = UIEdgeInsets(top: 1, left: 1, bottom: 1, right: 1)
        self.addSubview(self.fullScreenButton)
        
        let castImage = UIImage(named: "ChromeCast_Normal_Off_iPad")
        let chromecastButtonImageView: UIImageView = UIImageView.init(image: castImage)
        self.chromecastButton = UIButton(type: .custom)
...
        self.chromecastButton.setImage(chromecastButtonImageView.image?.withRenderingMode(.alwaysTemplate), for: .normal)
        self.chromecastButton.imageView?.tintColor = .white
        self.addSubview(self.chromecastButton)
        
        self.playButton = UIButton.init(type: UIButton.ButtonType.custom)
        self.playButton.setImage(UIImage.init(named: "Pause"), for: .selected)
        self.playButton.setImage(UIImage.init(named: "mediaPlay"), for: .normal)
        
        self.playButton.addTarget(self, action: #selector(playButtonTapped(sender:)), for: .touchUpInside)
        self.playButton.imageEdgeInsets = UIEdgeInsets(top: 1, left: 1, bottom: 1, right: 1)
        
        self.playButton.isUserInteractionEnabled = true
        self.addSubview(self.playButton)
...
        self.zoomInOutButton.addTarget(self, action: #selector(zoomInOutButtonTapped(sender:)), for: .touchUpInside)

        addShadowOnButton(button: self.playButton)
        
        self.rewindButton = UIButton.init(type: UIButton.ButtonType.custom)
        
        self.rewindButton.setImage(UIImage.init(named: "RewindButton"), for: .normal)
        
        self.rewindButton.addTarget(self, action: #selector(rewindButtonTapped(sender:)), for: .touchUpInside)
        self.rewindButton.imageEdgeInsets = UIEdgeInsets(top: 1, left: 1, bottom: 1, right: 1)
        self.addSubview(self.rewindButton)
        addShadowOnButton(button: self.rewindButton)
        
        self.forwardButton = UIButton.init(type: UIButton.ButtonType.custom)
        
        self.forwardButton.setImage(UIImage.init(named: "Forward"), for: .normal)
        
        self.forwardButton.addTarget(self, action: #selector(forwardButtonTapped(sender:)), for: .touchUpInside)
        self.forwardButton.imageEdgeInsets = UIEdgeInsets(top: 1, left: 1, bottom: 1, right: 1)
        self.addSubview(self.forwardButton)
        addShadowOnButton(button: self.forwardButton)
        
...
